# MyFans

./: .commitlintrc.json  .env.dev.example  .env.example  .gitignore  CHANGELOG.md  CHECKOUT_FLOW_VERIFICATION.md  CI_CHECKS_STATUS.md  CI_CONTRACT_REGRESSION_TESTING.md  CONTRACT_REGRESSION_IMPLEMENTATION_CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  EARNINGS_FEATURE.md  EARNINGS_IMPLEMENTATION_SUMMARY.md  EARNINGS_INTEGRATION_GUIDE.md  EARNINGS_README.md  EARNINGS_VERIFICATION.md  FEATURE_FLAGS.md  FEATURE_FLAGS_ACCEPTANCE.md  FINAL_VERIFICATION.md  IMPLEMENTATION_DETAILS.md  INTEGRATION.md  ISSUES.md  ISSUE_62_SUBSCRIPTION_FEE_HANDLING.md  MOBILE_RESPONSIVE_SUMMARY.md  NOTICE  PAUSE_FEATURE_SUMMARY.md  PLATFORM_TRIAGE.md  PR_DESCRIPTION.md  PR_DESCRIPTION_ISSUE_83.md  PR_VERIFICATION.md  QUICKSTART.md  README.md  SECURITY.md  SETUP_STATUS.md  SOCIAL_LINKS_FORM_SUMMARY.md  Scarb.toml  TEST_RESULTS.md  TEST_VERIFICATION.md  TODO.md  (+9 more)
MyFans/contract/contracts/subscription/: Cargo.toml
contract/: .auditignore  .gitignore  AUTH_MATRIX.md  CHANGELOG.md  Cargo.toml  PAUSE_IMPLEMENTATION.md  README.md  REGRESSION_CHECKLIST.md  REGRESSION_TESTING.md  STORAGE_KEYS.md  TESTING.md  audit.toml  contract-ids.json  deployed-local.json  package.json
contract/abi-snapshots/: README.md
contract/contracts/content-access/: ACCEPTANCE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION.md
contract/contracts/content-access/src/: content_query_test.rs  lib.rs
contract/contracts/content-access/src/tests/: event_tests.rs  init_admin_tests.rs  initialize_admin_tests.rs  unauthorized_tests.rs
contract/contracts/content-access/test_snapshots/test/: test_access_is_buyer_specific.1.json  test_access_is_content_id_specific.1.json  (+19 more)
contract/contracts/content-likes/: ACCEPTANCE.md  AUTHORIZATION_TESTS.md  Cargo.toml  EVENTS_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  SNAPSHOT_RESTORE_TEST.md  VERIFICATION.md
contract/contracts/content-likes/proptest-regressions/: property_tests.txt
contract/contracts/content-likes/src/: events.rs  lib.rs  property_tests.rs
contract/contracts/content-likes/tests/: contract_integration.rs
contract/contracts/creator-deposits/: Cargo.toml  README.md
contract/contracts/creator-deposits/proptest-regressions/: property_tests.txt
contract/contracts/creator-deposits/src/: lib.rs  property_tests.rs
contract/contracts/creator-earnings/: Cargo.toml  README.md
contract/contracts/creator-earnings/src/: lib.rs  property_tests.rs  test.rs
contract/contracts/creator-registry/: Cargo.toml  README.md
contract/contracts/creator-registry/src/: lib.rs  property_tests.rs  test.rs
contract/contracts/earnings/: Cargo.toml  GAS_REVIEW.md
contract/contracts/earnings/src/: lib.rs  property_tests.rs  test.rs
contract/contracts/myfans-contract/: Cargo.toml
contract/contracts/myfans-contract/src/: events.rs  lib.rs  test.rs  treasury.rs  treasury_test.rs
contract/contracts/myfans-lib/: ACCEPTANCE_CRITERIA.md  BUILD_STATUS.md  Cargo.toml  README.md  SETUP.md
contract/contracts/myfans-lib/examples/: usage.rs
contract/contracts/myfans-lib/src/: auth.rs  error_codes.rs  events.rs  lib.rs  property_tests.rs  test_fixtures.rs
contract/contracts/myfans-token/: Cargo.toml  README.md
contract/contracts/myfans-token/proptest-regressions/: property_tests.txt
contract/contracts/myfans-token/src/: allowance_expiry_tests.rs  error_code_tests.rs  gas_tests.rs  lib.rs  property_tests.rs  test.rs
contract/contracts/subscription/: ACCEPTANCE.md  Cargo.toml  README.md
contract/contracts/subscription/src/: dummy_data.rs  lib.rs  property_tests.rs  test.rs
contract/contracts/subscription/tests/: auth_matrix.rs  contract_integration.rs
contract/contracts/test-consumer/: Cargo.toml  ERROR_VALIDATION.md  GAS_REVIEW.md  README.md
contract/contracts/test-consumer/src/: lib.rs  treasury_integration_test.rs
contract/contracts/treasury/: Cargo.toml  README.md
contract/contracts/treasury/src/: gas_benchmarks.rs  lib.rs  property_tests.rs  test.rs
contract/docs/: BRANCH_PROTECTION.md  CONTRACT_DEPLOY_RUNBOOK.md  DEPLOYED_ENV.md
contract/docs/interfaces/: README.md  content-access.md  content-likes.md  creator-deposits.md  creator-earnings.md  creator-registry.md  earnings.md  myfans-main.md  myfans-token.md  runbook.md  subscription.md  treasury-contracts.md  treasury-src.md
contract/scripts/: check-interface-docs-drift.mjs  check-interface-docs-drift.test.mjs  deploy.sh  release-check.sh  snapshot-abi.sh  test-deploy-output.sh
contract/src/: events.rs  lib.rs  test.rs  treasury.rs  treasury_test.rs
contract/test_snapshots/test/: test_burn_fails_when_paused.1.json  test_cancel_nonexistent_panics.1.json  test_cancel_removes_subscription.1.json  test_get_creator_returns_correct_tuple.1.json  test_get_creator_returns_none_for_non_registered.1.json  test_get_subscription_expiry_none_when_no_subscription.1.json  test_get_subscription_expiry_returns_correct_value.1.json  test_is_subscribed_before_and_after_cancel.1.json  test_is_subscribed_false_when_no_subscription.1.json  test_is_subscribed_returns_false_when_expired.1.json  test_mint_fails_when_paused.1.json  test_non_admin_cannot_set_verified.1.json  test_non_admin_cannot_set_verified_reverts.1.json  test_operations_work_after_unpause.1.json  test_pause_and_unpause_work.1.json  test_pause_requires_admin_auth.1.json  test_register_creator.1.json  test_register_creator_twice_panics.1.json  test_register_multiple_creators.1.json  test_set_verified_panics_for_non_registered_creator.1.json  test_set_verified_updates_status.1.json  test_subscription_flow.1.json  test_transfer_fails_when_paused.1.json  test_unauthorized_pause_revert.1.json  test_unauthorized_unpause_revert.1.json  test_unpause_requires_admin_auth.1.json
contract/test_snapshots/treasury_test/: test_deposit_and_withdraw.1.json  test_treasury_auth_requirements_mock_auths.1.json  test_unauthorized_withdraw_reverts.1.json  test_withdraw_insufficient_balance.1.json
(+1238 files in other folders)
