[workspace]
resolver = "2"
members = [
    "contracts/myfans-contract",
    "contracts/content-access",
    "contracts/content-likes",
    "contracts/creator-deposits",
    "contracts/creator-earnings",
    "contracts/creator-registry",
    "contracts/earnings",
    "contracts/myfans-lib",
    "contracts/myfans-token",
    "contracts/subscription",
    "contracts/test-consumer",
    "contracts/treasury",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mimah97 <e77377366@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mimah97/MyFans"
description = "MyFans Soroban smart contracts."
publish = false

[workspace.dependencies]
soroban-sdk = "21.7.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
