[workspace]
resolver = "2"
members = [
    "contracts/myfans-contract",
    "contracts/content-access",
    "contracts/content-likes",
    "contracts/creator-deposits",
    "contracts/creator-earnings",
    "contracts/creator-registry",
    "contracts/earnings",
    "contracts/myfans-lib",
    "contracts/myfans-token",
    "contracts/subscription",
    "contracts/test-consumer",
    "contracts/treasury",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
# Minimum Supported Rust Version (MSRV).
# soroban-sdk 21.x requires at least 1.74 (curve25519-dalek 4.x lower bound).
# Bump this only when a dependency genuinely requires a newer compiler.
rust-version = "1.74"
authors = ["Mimah97 <e77377366@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mimah97/MyFans"
description = "MyFans Soroban smart contracts."
publish = false

[workspace.dependencies]
soroban-sdk = "21.7.7"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
