[package]
name = "content-likes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "contract_integration"
path = "tests/contract_integration.rs"
required-features = ["testutils"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
myfans-lib = { path = "../myfans-lib" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
myfans-lib = { path = "../myfans-lib", features = ["testutils"] }
proptest = { workspace = true }
