[package]
name = "subscription"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
myfans-lib = { path = "../myfans-lib" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
myfans_token = { package = "myfans-token", path = "../myfans-token" }
content_access = { package = "content-access", path = "../content-access" }
