[package]
name = "test-consumer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
myfans-lib = { path = "../myfans-lib" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
subscription = { package = "subscription", path = "../subscription" }
content_access = { package = "content-access", path = "../content-access" }
content_likes = { package = "content-likes", path = "../content-likes" }
creator_registry = { package = "creator-registry", path = "../creator-registry" }
treasury = { package = "treasury", path = "../treasury" }
earnings = { package = "earnings", path = "../earnings" }
creator_earnings = { package = "creator-earnings", path = "../creator-earnings" }
creator_deposits = { package = "creator-deposits", path = "../creator-deposits" }
myfans_contract = { package = "myfans-contract", path = "../myfans-contract" }
myfans_token = { package = "myfans-token", path = "../myfans-token" }
