[package]
name = "subscription"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
myfans-lib = { path = "../myfans-lib" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
